samples/_failures_safe/1761699050_c3eecc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1d18a4b8.c: In function ‘main’:
./samples/SAFE/__tmp_1d18a4b8.c:157:5: error: expected expression at end of input
  157 |     printf("Processing complete after %d cycles\n",
      |     ^~~~~~
./samples/SAFE/__tmp_1d18a4b8.c:157:5: error: expected declaration or statement at end of input
